--- a/inventory.ini
+++ b/inventory.ini
@@ -1,9 +1,14 @@
-[catalouge]
-172.31.26.71
-172.31.26.71
-172.31.26.71
-172.31.26.71
-172.31.26.71
+[mongodb]
+mongodb.daws86s.fun
+
+[redis]
+redis.daws86s.fun
+
+[mysql]
+mysql.daws86s.fun
+
+[rabbitmq]
+rabbitmq.daws86s.fun
 
 [frontend]
 172.31.27.57
@@ -13,6 +18,10 @@
 
 [local]
 localhost
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
 
 [local:vars]
 NAME=from inventory
