--- a/inventory.ini
+++ b/inventory.ini
@@ -10,11 +10,14 @@ mysql.daws86s.fun
 [rabbitmq]
 rabbitmq.daws86s.fun
 
-[frontend]
-172.31.27.57
+[catalogue]
+catalogue.daws86s.fun
 
 [cart]
-172.31.26.71
+cart.daws86s.fun
+
+[user]
+user.daws86s.fun
 
 [local]
 localhost
