--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -56,8 +56,13 @@
       name: mongodb-mongosh
       state: present
 
-  - name: connnect to mongodb catalogue
-    ansible.builtin.command: mongosh mongodb.daws86s.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
+  # - name: connnect to mongodb catalogue
+  #   ansible.builtin.command: mongosh mongodb.daws86s.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
+  #   register: catalogue_output
+
+  - name: evaluate cataalogue database
+    community.mongodb.mongodb_shell:
+      eval: db.getMongo().getDBNames().indexOf('catalogue')
     register: catalogue_output
 
   - name: print catalogue output
